# spinup

./: .gitignore  .ocamlformat  .ocamlinit  GNUmakefile  TODO.org  dune  dune-project  errors.ml  example.template  giraffe.ml~  io.ml  readme.org  spinup.ml  spinup.opam  spinup.opam.locked  template.ml  use-output.top
.githooks/: post-commit  pre-commit
app/: dune  spinup.ml
lib/: action.ml  action.mli  action.shutoffmli  action_error.ml  cli.ml  cli.mli  command.ml  command.mli  config.ml  config.mli  config_error.ml  contact.ml  contact.mli  crunch.ml  crunch.mli  data.ml  datasource.ml  dune  error_message.ml  error_message.mli  errors.ml  errors.mli  filesystem.ml  filesystem.mli  filesystem.shutoffmli  filesystem_error.ml  from_files.ml  global_error.ml  global_error.mli  global_error.shutoffmli  global_error_intf.ml  io.ml  layout.ml  layout.mli  lib.ml  lineinfo.ml  lineinfo.mli  template.ml  template.mli  template_error.ml  (+1 more)
lib/config/: .dude  .spinuprc
lib/templates/: ##[cl,pname].opam  .dir-locals.el  Dockerfile  GNUmakefile  activate-hooks  dune-project  lib.ml  test_project.ml
lib/templates/app/: ##[cl,pname].ml
lib/templates/lib/: dune  example_module.ml  message.ml
lib/templates/test/: dune
subdir/: rat.ml
templates/: GNUMakefile  app_dune  dune-project  exe_dune  exe_dune~  lib  lib_dune  project.ml  test_dune
test/: action.ml  dune  error_message.ml  test_spinup.ml
test/cram-tests/: already-exists.t
todos/: TODO.org  cli.org
