(library
 (name lib)
 (libraries prelude etude tint cmdliner))

(data_only_dirs config templates)

(rule
 (deps
  (source_tree templates))
 (action
  (with-stdout-to
   crunched_templates.ml
   (run ocaml-crunch -m plain templates))))

(rule
 (deps
  (source_tree config))
 (action
  (with-stdout-to
   crunched_config.ml
   (run ocaml-crunch -m plain config))))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
