(lang dune ##[cl,dune_version])
(name ##[cl,pname])
(generate_opam_files true)
(package
 (name ##[cl,pname])
 (description ##[cl,description])
 (synopsis ##[cl,synopsis])
 (maintainers ##[cl,maintainers])
 (authors ##[cl,authors])
 (homepage ##[cl,homepage])
 (bug_reports ##[cl,documentation])
 (depends
  (ocaml (>= 4.14.0))
   dune
   camlp-streams
   prelude
   etude
   utop
   ocp-index
   merlin)
 (source (github ##[cl,source])))

; Local Variables:
; mode: dune
; End:
